phase2 final edit

--- a/Final Project Phase II.ipynb
+++ b/Final Project Phase II.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {
     "id": "vXwpJObDFiWM"
    },
@@ -233,21 +233,17 @@
     "    return df\n",
     "\n",
     "def clean_data(df):\n",
-    "    #Remove Delta column\n",
     "    df = df.drop(columns=[\"Δ\"], axis=1)\n",
     "\n",
     "    percent_columns = df.columns[df.columns.str.contains(\"%\")]\n",
     "    \n",
     "    for col in percent_columns:\n",
-    "        #Remove % Symbol and NA values\n",
     "        df[col] = df[col].replace({\"%\": \"\", r\"NA\\[[a-c]\\]\": \"0\"}, regex=True)\n",
-    "\n",
-    "        #Format percentage into float\n",
     "        df[col] = df[col].astype(float) / 100\n",
     "    return df\n",
     "def export_data(df):\n",
-    "    df.to_csv(\"HDI_output_file.csv\", index=False)\n",
-    "    print(df)\n",
+    "    df.to_csv(\"HDI_cleaned.csv\", index=False)\n",
+    "    pprint.pprint(df)\n",
     "\n",
     "\n",
     "############ Function Call ############\n",
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "id": "HAkUOqMgXQJG"
    },
@@ -362,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "id": "f4-s72RNuKLR"
    },
@@ -445,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {
     "id": "yB3qXt_XuY7b"
    },
@@ -464,11 +460,18 @@
     "\n",
     "For each inconsistency (NaN, null, duplicate values, empty strings, etc.) you discover in your datasets, write at least 2 sentences stating the significance, how you identified it, and how you handled it.\n",
     "\n",
-    "1. Source 1 contained 3 missing values (NA) for the column titled growth. The reason stated for this was that data did not exist for the previous year, therefore we assumed growth to be 0 and replaced these values with 0.\n",
+    "1. Web Collection Source 1 contained 3 missing values (NA) for the column titled growth. The reason stated for this was that data did not exist for the previous year, therefore we assumed growth to be 0 and replaced these values with 0.\n",
     "\n",
-    "2. Source 1 contained a column containing percentage data that was formatted as a string with a \"%\" at the end of it. We needed to reformat this column to use it for analysis and we did so by removing the % symbol, converting to float, and dividing by 100.\n",
+    "2. Web Collection Source 1 contained a column containing percentage data that was formatted as a string with a \"%\" at the end of it. We needed to reformat this column to use it for analysis and we did so by removing the % symbol, converting to float, and dividing by 100.\n",
     "\n",
-    "3. Source 2 contained countless Null Values across many columns. All null values were dropped altogether as many null values usually occured in the same row and made the row itself useless for analysis.\n",
+    "3. Web Collection Source 2 contained countless Null Values across many columns. All null values were dropped altogether. Initially, the data appeared unorganized but after\n",
+    "analyzing it, we discovered that each data series corresponds to a specific country,\n",
+    "identified by codes like “0:0:0:0:0:0” for Turkey. By mapping these codes to their respective\n",
+    "countries, we could structure the data. \n",
+    "\n",
+    "4. Web Collection Source 3 contained some NaN values after extracting needed data from API. Those missing values were dropped\n",
+    "\n",
+    "5. Downloaded Dataset had a lot of missing values and needless columns. So, we defined function called 'cleaning_sub_table' which extract necessary columns from the original table.\n",
     "\n"
    ]
   },
