--- a/Final Project Phase II.ipynb
+++ b/Final Project Phase II.ipynb
@@ -469,11 +469,18 @@
     "identified by codes like “0:0:0:0:0:0” for Turkey. By mapping these codes to their respective\n",
     "countries, we could structure the data. \n",
     "\n",
+    "Example of Inconsistencies in API: \"reportingEnd\":\"2024-10-01T23:59:59\",\"action\":\"Information\",\"series\":{\"0:0\":{\"attributes\":[null,0,0,0,null,0],\"observations\":{\"0\":[\"7\",0,0,null],\"1\":[\"7\",0,0,null],\"2\":[\"8\",0,0,null],\"3\":[\"8\",0,0,null],\"4\":[\"8\",0,0,null],\"5\":[\"8.5\",0,0,null],\"6\":[\"8.5\",0,0,null],\"7\":[\"8.5\",0,0,null],\"8\":[\"8.5\",0,0,null],\"9\":[\"8.5\",0,0,null],\"10\":[\"8.5\",0,0,null],\"11\":[\"8.5\",0,0,null],\"12\":[\"9.5\",0,0,null],\"13\":[\"9.5\",0,0,null],\"14\":[\"9.5\",0,0,null],\"15\":[\"9.5\",0,0,null],\"16\":[\"9\",0,0,null],\"17\":[\"9\",0,0,null],\"18\":[\"9\",0,0,null],\"19\":[\"9.5\",0,0,null],\"20\":[\"9.5\",0,0,null],\"21\":[\"9\",0,0,null],\"22\":[\"9\",0,0,null],\"23\":[\"9.5\",0,0,null],\"24\":[\"9.5\",0,0,null],\"25\":[\"9.5\",0,0,null],\"26\":[\"9.5\",0,0,null]\n",
+    "\n",
     "4. Web Collection Source 3 contained some NaN values after extracting needed data from API. Those missing values were dropped\n",
     "\n",
     "5. Downloaded Dataset had a lot of missing values and needless columns. So, we defined function called 'cleaning_sub_table' which extract necessary columns from the original table.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
