added additional dataset

--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "0p5xxmqzFGrO"
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "id": "vXwpJObDFiWM"
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "id": "YtV_MYeusYDd"
    },
@@ -320,6 +320,96 @@
     "        \n",
     "############ Function Call ############\n",
     "web_parser2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional Dataset Parsing/Cleaning Functions\n",
+    "\n",
+    "Write any supplemental (optional) functions here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Country     Date  Interest Rate\n",
+      "0          RU  2000-01          45.00\n",
+      "1          RU  2000-02          45.00\n",
+      "2          RU  2000-03          33.00\n",
+      "3          RU  2000-04          33.00\n",
+      "4          RU  2000-05          33.00\n",
+      "...       ...      ...            ...\n",
+      "11300      MX  2024-06          11.00\n",
+      "11301      MX  2024-07          11.00\n",
+      "11302      MX  2024-08          10.75\n",
+      "11303      MX  2024-09          10.50\n",
+      "11304      MX  2024-10          10.50\n",
+      "\n",
+      "[11252 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extra_source1():\n",
+    "  urls = [\"https://stats.bis.org/api/v2/data/dataflow/BIS/WS_CBPOL/1.0/M.AR+AU+BR+CA+CH+CL+CN+CO+CZ+DK+GB+HK+HR+HU+ID+IL+IN+IS+JP+KR+MA+MK+MX+MY+NO+NZ+PE+PH+PL+RO+RS+RU+SA+SE+TH+TR+US+XM+ZA?startPeriod=2000-01-01&endPeriod=2024-10-01&format=sdmx-json\"]\n",
+    "  data = [json.loads(requests.get(url).content) for url in urls]\n",
+    "  country_abbv = get_country_abbv(data)\n",
+    "  country_list = get_countries(country_abbv)\n",
+    "  interest_rate_dict = get_interest_rate(data, country_list)\n",
+    "  df = match_interest_rate_date(interest_rate_dict)\n",
+    "  df = clean_null(df)\n",
+    "  df.to_csv('interest_rate_monthly.csv', index=False)\n",
+    "  pprint.pprint(df)\n",
+    "  \n",
+    "def get_country_abbv(data):\n",
+    "  country_abbv = []\n",
+    "  for i, val in enumerate(data):\n",
+    "    for item in data[i][\"data\"][\"structure\"][\"dimensions\"][\"series\"][1]['values']:\n",
+    "        country_abbv.append(item)\n",
+    "  return country_abbv\n",
+    "\n",
+    "def get_countries(country_abbv):\n",
+    "  country_list = []\n",
+    "  for item in country_abbv: \n",
+    "      country_list.append(item[\"id\"])\n",
+    "  return country_list\n",
+    "\n",
+    "def get_interest_rate(data, country_list):\n",
+    "  new_list = []\n",
+    "  for i, val in enumerate(data):\n",
+    "      for key, value in data[i][\"data\"][\"dataSets\"][0][\"series\"].items():\n",
+    "          alist = []\n",
+    "          for k, val in value[\"observations\"].items():\n",
+    "              alist.append(val[0])\n",
+    "          new_list.append(alist)\n",
+    "  interest_rate_dict = dict(zip(country_list, new_list))\n",
+    "  return interest_rate_dict\n",
+    "\n",
+    "def match_interest_rate_date(nterest_rate_dict):\n",
+    "  dates = pd.date_range(start=\"2000-01\", end=\"2024-10\", freq='MS') \n",
+    "  rows = []\n",
+    "  for country, values in nterest_rate_dict.items():\n",
+    "      for date, value in zip(dates, values):\n",
+    "          rows.append({'Country': country, 'Date': date.strftime(\"%Y-%m\"), 'Interest Rate': round(float(value), 3)})\n",
+    "\n",
+    "  df = pd.DataFrame(rows)\n",
+    "  return df\n",
+    "\n",
+    "def clean_null(df):\n",
+    "  df[df.isnull().any(axis=1)]\n",
+    "  df = df.dropna()\n",
+    "  return df\n",
+    "    \n",
+    "############ Function Call ############\n",
+    "extra_source1()"
    ]
   },
   {
