--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -549,18 +549,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "id": "00EurEXJwvxf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between HDI and Average Disposable Income (2010–2022): 0.7702\n"
+     ]
+    }
+   ],
    "source": [
+    "import pycountry\n",
+    "\n",
     "def insight3():\n",
-    "  pass\n",
+    "    hdi_df = pd.read_csv(\"HDI_cleaned.csv\")\n",
+    "    disposable_income_df = pd.read_csv(\"disposable_income.csv\")\n",
     "\n",
+    "    disposable_income_df = disposable_income_df[(disposable_income_df['Year'] >= 2010) & (disposable_income_df['Year'] <= 2022)]\n",
+    "    avg_disposable_income_df = disposable_income_df.groupby(\"Country\", as_index=False)['Disposable_Income'].mean()\n",
+    "    avg_disposable_income_df.rename(columns={\"Disposable_Income\": \"Avg_Disposable_Income\"}, inplace=True)\n",
     "\n",
+    "    hdi_df[\"Country_Code\"] = hdi_df[\"Country or territory\"].apply(get_country_code)\n",
     "\n",
+    "    merged_df = pd.merge(hdi_df, avg_disposable_income_df, left_on=\"Country_Code\", right_on=\"Country\", how=\"inner\")\n",
+    "    correlation = merged_df[\"HDI value\"].corr(merged_df[\"Avg_Disposable_Income\"])\n",
+    "    \n",
+    "    print(f\"Correlation between HDI and Average Disposable Income (2010–2022): {correlation:.4f}\")\n",
     "\n",
+    "def get_country_code(name):\n",
+    "    try:\n",
+    "        return pycountry.countries.lookup(name).alpha_3\n",
+    "    except LookupError:\n",
+    "        return None\n",
     "\n",
     "############ Function Call ############\n",
     "insight3()"
@@ -579,17 +603,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "id": "LUWgj50BwwKN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Countries by HDI Annual Growth:\n",
+      " Rank Country or territory  HDI value  %annual growth(2010–2022)\n",
+      "  122                Nauru      0.696                     0.0184\n",
+      "  158                Haiti      0.552                     0.0174\n",
+      "  142             Eswatini      0.610                     0.0170\n",
+      "  171             Djibouti      0.515                     0.0167\n",
+      "  176             Ethiopia      0.492                     0.0155\n",
+      "\n",
+      "Bottom 5 Countries by HDI Annual Growth:\n",
+      " Rank Country or territory  HDI value  %annual growth(2010–2022)\n",
+      "  193              Somalia      0.380                     0.0000\n",
+      "  102     Marshall Islands      0.731                     0.0000\n",
+      "  116                Samoa      0.702                     0.0002\n",
+      "  115              Jamaica      0.706                     0.0006\n",
+      "   97             Dominica      0.740                     0.0006\n"
+     ]
+    }
+   ],
    "source": [
     "def insight4():\n",
-    "  pass\n",
-    "\n",
-    "\n",
-    "\n",
+    "    hdi_df = pd.read_csv(\"HDI_cleaned.csv\")\n",
+    "    sorted_hdi_desc = hdi_df.sort_values(by=\"%annual growth(2010–2022)\", ascending=False)\n",
+    "    \n",
+    "    sorted_hdi_asc = hdi_df.sort_values(by=\"%annual growth(2010–2022)\", ascending=True)\n",
+    "    \n",
+    "    top_5_hdi = sorted_hdi_desc.head(5)\n",
+    "    print(\"Top 5 Countries by HDI Annual Growth:\")\n",
+    "    print(top_5_hdi.to_string(index=False))\n",
+    "    \n",
+    "    bottom_5_hdi = sorted_hdi_asc.head(5)\n",
+    "    print(\"\\nBottom 5 Countries by HDI Annual Growth:\")\n",
+    "    print(bottom_5_hdi.to_string(index=False))\n",
     "\n",
     "\n",
     "############ Function Call ############\n",
@@ -609,19 +663,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "id": "-2YUtUESwwgv"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after function definition on line 1 (3031878938.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[70], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    insight5()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after function definition on line 1\n"
+     ]
+    }
+   ],
    "source": [
     "def insight5():\n",
-    "  pass\n",
+    "    \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    \n",
     "############ Function Call ############\n",
     "insight5()"
    ]
