--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -166964,7 +166964,8 @@
     "    \n",
     "        fig.show()\n",
     "############ Function Call ############\n",
-    "visual2()"
+    "visual2()\n",
+    "##I did it"
    ]
   },
   {
