Update Final Project Phase III.ipynb

--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -88,7 +88,11 @@
     "import pprint\n",
     "import re\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import pycountry\n",
+    "import plotly.express as px\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -496,8 +500,21 @@
    "outputs": [],
    "source": [
     "def insight1():\n",
-    "  pass\n",
+    "    df = web_parser2()\n",
+    "    df[\"Growth\"] = df.groupby('Country')['Total Asset'].pct_change() * 100\n",
+    "    average_growth = df.groupby('Country')['Growth'].mean()\n",
+    "    sorted_correlations = average_growth.sort_values(ascending=False)\n",
+    "    top_5_total_asset_growth = sorted_correlations.head(5)\n",
+    "    top_5_total_asset_decrease = sorted_correlations.tail(5).sort_values()\n",
+    "    print(\"Top 5 Most Grown Total Asset:\")\n",
+    "    for country, value in top_5_total_asset_growth.items():\n",
+    "        if country == 'XM': country = 'Euro Area'\n",
+    "        print(f\"{country}: {value:.3f}% Monthly\")\n",
     "\n",
+    "    print(\"\\nTop 5 Least Grown Total Asset:\")\n",
+    "    for country, value in top_5_total_asset_decrease.items():\n",
+    "        if country == 'XM': country = 'Euro Area'\n",
+    "        print(f\"{country}: {value:.3f}% Monthly\")\n",
     "\n",
     "\n",
     "\n",
@@ -525,10 +542,53 @@
    },
    "outputs": [],
    "source": [
+    "def msd_similarity(df):\n",
+    "  countries = df.columns\n",
+    "  n = len(countries)\n",
+    "  similarity_matrix = pd.DataFrame(np.zeros((n, n)), index=countries, columns=countries)\n",
+    "    \n",
+    "  for i, country1 in enumerate(countries):\n",
+    "    for j, country2 in enumerate(countries):\n",
+    "      if i < j: \n",
+    "        differences = df[country1] - df[country2]\n",
+    "        mean_square_diff = np.nanmean(differences ** 2)  \n",
+    "        similarity_matrix.loc[country1, country2] = 1 / (1 + mean_square_diff)  \n",
+    "  #print(similarity_matrix)\n",
+    "  return similarity_matrix\n",
+    "\n",
     "def insight2():\n",
-    "  pass\n",
+    "  df = extra_source1()\n",
+    "  wide_df = df.pivot(index=\"Date\", columns=\"Country\", values=\"Interest Rate\")\n",
     "\n",
+    "  msd_matrix = msd_similarity(wide_df)\n",
     "\n",
+    "  \n",
+    "  upper_triangle = np.triu(np.ones(msd_matrix.shape), k=1).astype(bool)\n",
+    "  up_tr_msd = msd_matrix.where(upper_triangle)\n",
+    "  \n",
+    "  flattened = up_tr_msd.unstack()\n",
+    "  flattened = flattened.dropna()\n",
+    "  sorted_msd = flattened.sort_values(ascending=False)\n",
+    "\n",
+    "  top_5_similar = sorted_msd.head(5)\n",
+    "\n",
+    "  top_5_dissimilar = sorted_msd.tail(5).sort_values()\n",
+    "\n",
+    "  print(\"Top 5 Most Similar Countries (MSD):\")\n",
+    "  for index, value in top_5_similar.items():\n",
+    "      item0 = index[0]\n",
+    "      item1 = index[1]\n",
+    "      if item0 == 'XM': item0 = 'Euro Area'\n",
+    "      if item1 == 'XM': item1 = 'Euro Area'\n",
+    "      print(f\"{item0} - {item1}: {value:.5f}\")\n",
+    "\n",
+    "  print(\"\\nTop 5 Least Similar Countries (MSD):\")\n",
+    "  for index, value in top_5_dissimilar.items():\n",
+    "      item0 = index[0]\n",
+    "      item1 = index[1]\n",
+    "      if item0 == 'XM': item0 = 'Euro Area'\n",
+    "      if item1 == 'XM': item1 = 'Euro Area'\n",
+    "      print(f\"{item0} - {item1}: {value:.5f}\")\n",
     "\n",
     "\n",
     "\n",
@@ -714,10 +774,52 @@
    },
    "outputs": [],
    "source": [
+    "def map_country_code(alpha_2_code):\n",
+    "    try:\n",
+    "        \n",
+    "        return pycountry.countries.get(alpha_2=alpha_2_code).alpha_3\n",
+    "    except AttributeError:\n",
+    "        \n",
+    "        return alpha_2_code\n",
+    "      \n",
     "def visual1():\n",
-    "  pass\n",
+    "  df = web_parser2()\n",
+    "  df[\"Growth\"] = df.groupby('Country')['Total Asset'].pct_change() * 100\n",
+    "  df['Country'] = df['Country'].apply(map_country_code)\n",
+    "  df['Country'] = df['Country'].apply(map_country_code)\n",
+    "  euro_area_countries = ['AUT', 'BEL', 'CYP', 'EST', 'FIN', 'FRA', 'DEU', 'GRC', 'IRL', 'ITA', 'LVA', 'LTU', 'LUX', 'MLT', 'NLD', 'PRT', 'SVK', 'SVN', 'ESP']\n",
+    "  euro_data = df[df['Country'] == 'XM'].copy()\n",
+    "  for country_code in euro_area_countries:\n",
+    "    country_data = euro_data.copy()  \n",
+    "    country_data['Country'] = country_code  \n",
+    "    df = pd.concat([df, country_data]) \n",
+    "  low_3percent = df['Growth'].quantile(0.03)  \n",
+    "  high_3percent = df['Growth'].quantile(0.97)\n",
+    "  fig = px.choropleth(\n",
+    "      df, \n",
+    "      locations=\"Country\",  \n",
+    "      color=\"Growth\",       \n",
+    "      hover_name=\"Country\", \n",
+    "      hover_data={\"Total Asset\": True},\n",
+    "      animation_frame=\"Date\", \n",
+    "      projection='mercator',\n",
+    "      color_continuous_scale=[\n",
+    "          [0, \"#488f31\"],     \n",
+    "          [(-low_3percent / (high_3percent + abs(low_3percent))), \"white\"],\n",
+    "          [1, \"#de425b\"]       \n",
+    "      ],\n",
+    "      title=\"Central Bank Total Asset Monthly Growth Over Time\",\n",
+    "      range_color=[low_3percent, high_3percent],\n",
+    "      labels={\"Growth\": \"Growth Rate (%)\"} \n",
+    "  )\n",
+    "  fig.update_geos(projection_scale=1,  \n",
+    "                  center={\"lat\": 20, \"lon\": 0},  \n",
+    "                  showcountries=True, showcoastlines=True,\n",
+    "                  lataxis_range=[-10, 90])  \n",
     "\n",
+    "  fig.update_layout(margin={\"r\":0,\"t\":50,\"l\":0,\"b\":0})\n",
     "\n",
+    "  fig.show()\n",
     "\n",
     "\n",
     "\n",
@@ -745,12 +847,59 @@
    "outputs": [],
    "source": [
     "def visual2():\n",
-    "  pass\n",
+    "    df = extra_source1()\n",
+    "    #making line graph \n",
+    "    continent_mapping= {\n",
+    "    'AU': 'Oceania', 'PH': 'Asia', 'TH': 'Asia', 'US': 'North America',\n",
+    "    'CN': 'Asia', 'DE': 'Europe', 'FR': 'Europe', 'BR': 'South America', \n",
+    "    'ZA': 'Africa', 'IN': 'Asia', 'JP': 'Asia', 'CA': 'North America', \n",
+    "    'MX': 'North America', 'GB': 'Europe', 'IT': 'Europe', 'RU': 'Europe',\n",
+    "    'XM': 'Europe', 'SE': 'Europe', 'CL': 'South America', 'TR': 'Asia', 'AR': 'South America',\n",
+    "    'HU': 'Europe', 'MY': 'Asia', 'PE':'South America', 'ID':\"Asia\", 'CH': 'Europe', \n",
+    "    'DK':'Europe', 'KR': 'Asia', \n",
+    "    'IL': 'Asia',           # Israel\n",
+    "    'NZ': 'Oceania',        # New Zealand\n",
+    "    'CZ': 'Europe',         # Czech Republic\n",
+    "    'PL': 'Europe',         # Poland\n",
+    "    'HK': 'Asia',           # Hong Kong\n",
+    "    'SA': 'Asia',           # Saudi Arabia\n",
+    "    'NO': 'Europe',         # Norway\n",
+    "    'MK': 'Europe',         # North Macedonia\n",
+    "    'HR': 'Europe',         # Croatia\n",
+    "    'TH': 'Asia',           # Thailand\n",
+    "    'RS': 'Europe',  # Serbia\n",
+    "    'RO': 'Europe',  # Romania\n",
+    "    'CO': 'South America',  # Colombia\n",
+    "    'IS': 'Europe',  # Iceland\n",
+    "    'MA': 'Africa'   # Morocco\n",
+    "    }\n",
     "\n",
+    "    df['Continent'] = df['Country'].map(continent_mapping)\n",
+    "    continents = df['Continent'].unique()\n",
+    "    for continent in continents:\n",
     "\n",
+    "        continent_df = df[df['Continent'] == continent]\n",
+    "        top_3_percent = continent_df['Interest Rate'].quantile(0.97)\n",
+    "        fig = px.line(\n",
+    "                continent_df, \n",
+    "                x='Date', \n",
+    "                y='Interest Rate', \n",
+    "                color='Country',\n",
+    "                title=f'Interest Rate Trends in {continent}',\n",
+    "                labels={'Interest Rate': 'Interest Rate (%)'}\n",
+    "        )\n",
+    "            \n",
     "\n",
-    "\n",
-    "\n",
+    "        fig.update_layout(\n",
+    "                xaxis_title='Date',\n",
+    "                yaxis_title='Interest Rate (%)',\n",
+    "                legend_title='Country',\n",
+    "                template='plotly_white',\n",
+    "                yaxis=dict(range=[0, top_3_percent])\n",
+    "        )\n",
+    "            \n",
+    "    \n",
+    "        fig.show()\n",
     "############ Function Call ############\n",
     "visual2()\n",
     "##I did it"
@@ -842,7 +991,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.5 64-bit ('3.11.5')",
    "language": "python",
    "name": "python3"
   },
@@ -856,7 +1005,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "591923e582065aff74a93a90fba3a50741a602c305cc24a3d29844b7d540dc83"
+   }
   }
  },
  "nbformat": 4,
