--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "id": "0p5xxmqzFGrO"
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "id": "vXwpJObDFiWM"
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "id": "YtV_MYeusYDd"
    },
@@ -280,7 +280,8 @@
     "  df = match_total_asset_date(total_asset_dict)\n",
     "  df = clean_null(df)\n",
     "  df.to_csv('total_assets_monthly.csv', index=False)\n",
-    "  pprint.pprint(df)\n",
+    "  #pprint.pprint(df)\n",
+    "  return df\n",
     "  \n",
     "def get_country_abbv(data):\n",
     "  country_abbv = []\n",
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,8 @@
     "  df = match_interest_rate_date(interest_rate_dict)\n",
     "  df = clean_null(df)\n",
     "  df.to_csv('interest_rate_monthly.csv', index=False)\n",
-    "  pprint.pprint(df)\n",
+    "  #pprint.pprint(df)\n",
+    "  return df\n",
     "  \n",
     "def get_country_abbv(data):\n",
     "  country_abbv = []\n",
@@ -493,11 +495,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "0J5Z3M84wmaY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Country     Date  Total Asset\n",
+      "0          NZ  2000-01         4.80\n",
+      "1          NZ  2000-02         4.21\n",
+      "2          NZ  2000-03         4.94\n",
+      "3          NZ  2000-04         5.05\n",
+      "4          NZ  2000-05         5.12\n",
+      "...       ...      ...          ...\n",
+      "14963      US  2024-06      7231.16\n",
+      "14964      US  2024-07      7178.39\n",
+      "14965      US  2024-08      7123.24\n",
+      "14966      US  2024-09      7080.06\n",
+      "14967      US  2024-10      7013.49\n",
+      "\n",
+      "[14957 rows x 3 columns]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'groupby'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 22\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mcountry\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m:\u001b[39;00m\u001b[39m.3f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m% Monthly\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[39m############ Function Call ############\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m insight1()\n",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m, in \u001b[0;36minsight1\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minsight1\u001b[39m():\n\u001b[1;32m      2\u001b[0m     df \u001b[39m=\u001b[39m web_parser2()\n\u001b[0;32m----> 3\u001b[0m     df[\u001b[39m\"\u001b[39m\u001b[39mGrowth\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mgroupby(\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mTotal Asset\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mpct_change() \u001b[39m*\u001b[39m \u001b[39m100\u001b[39m\n\u001b[1;32m      4\u001b[0m     average_growth \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mGrowth\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mmean()\n\u001b[1;32m      5\u001b[0m     sorted_correlations \u001b[39m=\u001b[39m average_growth\u001b[39m.\u001b[39msort_values(ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'groupby'"
+     ]
+    }
+   ],
    "source": [
     "def insight1():\n",
     "    df = web_parser2()\n",
@@ -609,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "id": "00EurEXJwvxf"
    },
@@ -663,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "id": "LUWgj50BwwKN"
    },
@@ -723,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "id": "-2YUtUESwwgv"
    },
