--- a/Final Project Phase III.ipynb
+++ b/Final Project Phase III.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,6 +674,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "7GzggCBoxwGA"
@@ -681,7 +682,7 @@
    "source": [
     "# Topic Summary\n",
     "\n",
-    "Please provide a brief executive summary (5 sentences or less) discussing your topic:"
+    "As a group consisting of an Indian Georgia Tech student and a Korean exchange student who are part of Georgia Tech's I-House program, a living learning community that pairs 23 Tech students and 23 foreign exchange students to facilitate an almost magical cultural exchange on campus, we often find ourselves in conversations with our dormmates about life in our respective home countries. A common question thrown around in our I-House residence hall is \"Are you happier in the U.S. or back home?\". Answers vary significantly between the numerous nationalities represented in our lounges, so our group decided to expand on that now ubiquitously asked I-House question to empirically answer \"What makes people happy in a country?\". We've focused our analysis on how the financial factors of interest rates, disposable income, and total assets of a country are related to its Human Development Index, a United Nations metric that measures a country's strength in health, education, and standard of living. We hope our analysis can enhance our unique experience at I-House and provide us with empiric analysis to bring to our wonderful and eye-opening conversations in the downstairs lounges of Gray and Hayes residence halls."
    ]
   },
   {
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {
     "id": "0J5Z3M84wmaY"
    },
@@ -746,6 +747,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "54oggrpbw6TX"
@@ -753,12 +755,12 @@
    "source": [
     "### Insight 1 Explanation\n",
     "\n",
-    "Insert explanation here"
+    "Everyone in I-House either loves to joke about the sometimes wild nature of their home countries or take pride in their countries' growth. To begin our analysis, we wish to understand which countries have experienced the most growth in their total assets on a monthly basis. Finland (FI), Gabon (GB), Estonia (EE), Luxembourg (LU), and United Arab Emirates (AE) lead with monthly growth rates of 1.526%, 1.509%, 1.414%, 1.233%, and 1.185%, respectively. Meanwhile, Chile (CL), Malaysia (MY), Hungary (HU), Hong Kong (HK), and South Korea (KR) have the slowest monthly growth rates of 0.408%, 0.492%, 0.509%, 0.509%, and 0.536%, respectively. This insight is significant as it allows us to identify for which countries we can examine recent changes in HDI more closely. Though wealthy countries such as the UAE and Luxemburg continue to grow their total assets, the relatively poor country of Gabon has experienced far more growth in Total Assets than a relatively wealth country like South Korea. Not only does this stoke pride for many Gabonese, but it highlights that wealth growth is not only concentrated in already wealthy countries and in the coming years it could prove fruitful to examine changes in HDI in Gabon and South Korea as a result of this increased wealth. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {
     "id": "mJe4pMRgwuC5"
    },
@@ -846,12 +848,12 @@
    "source": [
     "### Insight 2 Explanation\n",
     "\n",
-    "Insert explanation here"
+    "Often us I-House residents will be discussing about life in their countries when someone else will pipe up and say \"hey that's the same in my country!\", and we will then proceed to marvel at the remarkable similarties between faraway countries like Tanzania and South Korea. To identify whether government policies regarding interest rates can contribute to these surprising similarities, we ran a Mean Squared Distance calculation between the interest rates of each pairwise group of countries in our interest rates database to understand which countries interest rates are most similar to one another. Among the most similar pairs, the Euro Area and Sweden (0.80138) rank highest, followed by the Euro Area and Denmark (0.75221), and Sweden and Denmark (0.65604). This is very accurate as these countries are all European Nordic neighbors, and the Swedes, Danes, and Germans of I-House agree that life is pretty much the same in their countries and that strangers usually classify them all as German. Moreover The United States and Canada (0.63874) also show significant similarity, reflecting their shared geography, language, and economic integration. Meanwhile, Morocco and South Korea (0.58267) appear surprisingly similar, potentially due to shared economic or policy characteristics. Further interviews with Moroccons and South Koreans may reveal striking cultural similarities as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {
     "id": "00EurEXJwvxf"
    },
@@ -900,7 +902,7 @@
    "source": [
     "### Insight 3 Explanation\n",
     "\n",
-    "Insert explanation here"
+    "It's difficult to say whether money equates happiness however our correlation analysis reveals that HDI and Average Disposable income for the countries included in our dataset are strongly positively correlated with a correlation coefficient of 0.7702. This means that countries who's people have a larger amount of disposable income likely have access to better education, healthcare, and a better standard of living. "
    ]
   },
   {
@@ -166625,7 +166627,7 @@
    "source": [
     "### Visualization 3 Explanation\n",
     "\n",
-    "Insert explanation here"
+    "This box and whisker plot illustrates the spread of disposable income throughout the world and reveals stark inequalities of how excess income is distributed thorughout the world. The 50% of disposable incomes around the world range from just 25000 to around 38000 whilst there are countries whose people have up to 50000 USD of disposable income. Whilst the median income is at 30000 USD, the vastly extended whiskers make clear that there are staggeringly poor countries and staggeringly wealthy countries, with the distance highlighting just how uneven this little blue marble we call home is. I-House residents come from any where on this box plot and we all share a drive to make this world more evenly distributed, and we're sure this visual will increase that drive tenfold. "
    ]
   },
   {
